# opentxs-cli-legacy

./: .gitattributes  .gitignore  CMakeLists.txt  Hintingtest.txt  LICENCE.txt  LICENSE  README.md  README.txt  autostart-dev.local.example  ccolor.cpp  cmake-clear.sh  cmd.cpp  cmd.hpp  cmd_detail.hpp  cmd_tests.cpp  cmd_tree.cpp  daemon_tools.cpp  daemon_tools.hpp  doc.txt  example_coding.cpp  full-rebuild.sh  lib_common1.hpp  lib_common2.hpp  lib_common3.hpp  main.cpp  ot  ot.sh  otcli.cpp  otcli.hpp  othint.cpp  othint.hpp  readline.supp  run-normal.sh  runoptions.cpp  runoptions.hpp  start-check.sh  start-daemon-test.sh  start-devel.sh  start-normal.sh  start-shell.sh  (+11 more)
bprinter/: table_printer.h
cmake/modules/: FindEditline.cmake  FindEditlineLocal.cmake  FindOTLocal.cmake
doc/: auto-completion.txt  commands-tree.odg  doc.txt  list-of-commands.txt  todo-and-bugs.txt  work-summary.txt
doc/misc/: bug-llvm-suggested-namespace.txt
docs/config.example/: make-run.sh
docs/example_data/ot-servers/: DigitalisOTserver.otc
script/: ot  start-demo.sh  start-log-shell.sh  start-normal.sh  start-xterm-devel.sh
script/test/: tree1.txt  tree1a.out  tree1b.out
script/test/hint/: test1-answers.txt  test1-questions.txt
script/test/parse/: test1-answers.txt  test1-questions.txt
src/: CMakeLists.txt
src/base/: CMakeLists.txt  cmd.cpp  cmd.hpp  cmd_tree.cpp  daemon_tools.cpp  daemon_tools.hpp  lib_common2.hpp  lib_common3.hpp  otcli.cpp  othint.cpp  othint.hpp  template.cpp  template.hpp  text.hpp  useot.cpp  useot.hpp  utils.cpp  utils.hpp
src/otcli/: text.cpp  text.hpp
src/otx/: CMakeLists.txt  main.cpp
test-bash/old/: ot  simplehint.cpp
test-cpp/: .gitignore  a.cpp  test-crash-clang-debian.sh
test-cpp/objectname/: a.cpp
test-cpp/shared_and_pimpl/: Makefile  main.cpp  s.cpp  s.hpp
test-cpp/test2/: a.cpp  info.txt
test-cpp/value_init/: a.cpp
tests/: CMakeLists.txt  tests.cpp  tests.hpp
tests/test-bash/old/: ot  readme
tests/test-cpp/: a.cpp  test-crash-clang-debian.sh
tests/test-cpp/map/: a.cpp
tests/test-cpp/shared_and_pimpl/: Makefile  main.cpp  s.hpp
tests/test-cpp/test2/: info.txt
translations/: help.en.txt  help.pl.txt
